GET customer deatils by ID
